# supply-chain-disrupter

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: india_electronics.yaml
config/playbooks/: freight_spike_playbook.txt  port_closure_playbook.txt  supplier_failure_playbook.txt  weather_disruption_playbook.txt
data/processed/: vision_processed_docs.pkl
data/raw/: supply_chain_lite_master.xlsx
docs/: ARCHITECTURE.md
evaluation/: fixture_spec_conformant_db.py  qa_02_delivery_status_label_mapping.py  qa_03_duration_escalation_matrix.py  qa_04_replay_mode_real_data.py  qa_04_replay_mode_synthetic_fixture.py  qa_05_live_mode_taiwan_earthquake.py  qa_06_live_mode_red_sea_duration_escalation.py  qa_07_backwards_compat_state_shims.py  qa_08_integration_schema_real_data.py  qa_08_integration_schema_synthetic_fixture.py  risk_classifier_qa_log.txt  util_inspect_db_schema.py
fine_tuning/: README.md  __init__.py  colab_finetune_and_upload.py  evaluate_all.py  finetune_distilbert.py  finetune_embeddings.py  finetune_gpt4o_mini.py  generate_training_data.py
fine_tuning/data/: distilbert_test_split.json  distilbert_val_metrics.json  qa_pairs.json
scripts/: build_databases.py  build_rag_collections.py
src/: build_databases.py  main.py
src/agents/: data_ingestion_agent.py  distilbert_signal.py  judge_agent.py  langgraph_engine.py  llm_signal.py  mitigation_agent.py  (+5 more)
supply_chain_disrupter.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_ensemble_signals.py  test_llm_agents.py  test_master_v3.py  test_risk_classifier_agent.py
(+57 files in other folders)
